@@ -36,8 +36,8 @@
   <div class="lfloat"><img src="/prodsoft/npg/icons/sanger-logo.png" alt="WTSI logo" /></div>
   <div class="rfloat">
     <div class="npg_title [% dev ? 'dev_highlight' : '' %]">[% npg_title %]</div>
-    <div><a href="#" onclick="authlink();return false;"><img src="/prodsoft/npg/icons/navigation/[% image %].gif" alt="[% image == 'logout' ? 'Logout' : 'Login';  %] button" /></a>
-   [%- IF image == 'logout' %]Logged in as <a href="[% SCRIPT_NAME %]/user/[% requestor.username %]">[% view.realname(requestor.username);%]</a>[% ELSE %]&nbsp;<a href="#" onclick="authlink();return false;">Log in</a>[% END -%]
+    <div><a href="/perl/enigmatic.cgi"><img src="/prodsoft/npg/icons/navigation/[% image %].gif" alt="[% image == 'logout' ? 'Logout' : 'Login';  %] button" /></a>
+   [%- IF image == 'logout' %]Logged in as <a href="[% SCRIPT_NAME %]/user/[% requestor.username %]">[% view.realname(requestor.username);%]</a>[% ELSE %]&nbsp;<a href="/perl/enigmatic.cgi">Log in</a>[% END -%]
 <div>Group[% IF requestor.usergroups.size > 1; 's'; END; %]:[% FOREACH usergroup = requestor.usergroups %]&nbsp;[% usergroup.groupname %][% END %]</div>
     </div>
     [% IF rfid -%]
